be/src/runtime/fragment-instance-state.cc
@@ -132,11 +132,15 @@ Status FragmentInstanceState::Prepare() {
   event_sequence_->Start(query_state_->fragment_events_start_time());
   UpdateState(StateEvent::PREPARE_START);
 
+  // Reserve one main thread from the pool
+  runtime_state_->resource_pool()->AcquireThreadToken();
+
+  // Exercise debug actions at the first point where errors are possible in Prepare().
+  RETURN_IF_ERROR(DebugAction(query_state_->query_options(), "FIS_IN_PREPARE"));
+
   RETURN_IF_ERROR(runtime_state_->InitFilterBank(
       fragment_ctx_.fragment.runtime_filters_reservation_bytes));
 
-  // Reserve one main thread from the pool
-  runtime_state_->resource_pool()->AcquireThreadToken();
   avg_thread_tokens_ = profile()->AddSamplingCounter("AverageThreadTokens",
       bind<int64_t>(mem_fn(&ThreadResourcePool::num_threads),
           runtime_state_->resource_pool()));
